--- a/indexs_new.html
+++ b/indexs_new.html
@@ -500,7 +500,7 @@
         
         // Function to redirect to needs page
         function redirectToNeeds() {
-            window.location.href = 'needs.html';
+            window.location.href = 'detailed_needs.html';
         }
         
         // Event listeners for showing/hiding forms
