Function for Holovna Vuytu buttons

--- a/needs.html
+++ b/needs.html
@@ -474,19 +474,6 @@
             <div>launched in 2023</div>
         </div>
     </div>
+    <script src="static/js/main.js"></script>
 </body>
 </html>
-
-// Add this script at the end of the body section of needs.html
-<script>
-    // Get all "Перейти" buttons
-    const redirectButtons = document.querySelectorAll('.card-button');
-    
-    // Add click event listener to each button
-    redirectButtons.forEach(button => {
-        button.addEventListener('click', function(e) {
-            e.preventDefault();
-            window.location.href = 'detailed_needs.html';
-        });
-    });
-</script>
