--- a/detailed_needs.html
+++ b/detailed_needs.html
@@ -519,7 +519,7 @@
         <div class="nav-links">
             <a href="#" class="nav-link">Про нас</a>
             <a href="#" class="nav-link" id="homeLink">Головна</a>
-            <a href="#" class="nav-link">Вийти</a>
+            <a href="#" class="nav-link" id="logoutButton">Вийти</a>
         </div>
         <div class="user-profile" onclick="goToProfile()">
             <div class="user-name">@user_name</div>
@@ -730,49 +730,6 @@
             <button class="contribute-button">Внести свій вклад</button>
         </div>
     </div>
-
-    <script>
-        function openModal() {
-            document.getElementById('needModal').classList.add('active');
-            document.body.style.overflow = 'hidden'; // Prevent scrolling when modal is open
-        }
-
-        function closeModal() {
-            document.getElementById('needModal').classList.remove('active');
-            document.body.style.overflow = 'auto'; // Enable scrolling when modal is closed
-        }
-
-        // Close modal when clicking outside the modal content
-        document.getElementById('needModal').addEventListener('click', function(event) {
-            if (event.target === this) {
-                closeModal();
-            }
-        });
-
-        // Function to redirect to profile page
-        function goToProfile() {
-            window.location.href = 'profile.html';
-        }
-        
-        // Add event listener to the "Головна" link
-        document.getElementById('homeLink').addEventListener('click', function(event) {
-            event.preventDefault(); // Prevent default link behavior
-            // Redirect to indexs_new.html when clicked
-            window.location.href = 'indexs_new.html';
-        });
-        
-        // Function to preview uploaded image
-        function previewImage(event) {
-            const reader = new FileReader();
-            reader.onload = function() {
-                const img = document.createElement('img');
-                img.src = reader.result;
-                const placeholder = document.querySelector('.photo-placeholder2');
-                placeholder.innerHTML = '';
-                placeholder.appendChild(img);
-            }
-            reader.readAsDataURL(event.target.files[0]);
-        }
-    </script>
+    <script src="static/js/main.js"></script>
 </body>
 </html>
