трохи виправила frontend(треба пофіксити логотипи)

--- a/make_request.html
+++ b/make_request.html
@@ -258,14 +258,27 @@
                     <label for="region">Область</label>
                     <select id="region" class="form-control" required>
                         <option value="" disabled selected>Виберіть область</option>
-                        <option value="kyiv">Київська</option>
-                        <option value="lviv">Львівська</option>
-                        <option value="kharkiv">Харківська</option>
-                        <option value="odesa">Одеська</option>
+                        <option value="vinnytsia">Вінницька</option>
+                        <option value="volyn">Волинська</option>
                         <option value="dnipro">Дніпропетровська</option>
                         <option value="donetsk">Донецька</option>
+                        <option value="zhytomyr">Житомирська</option>
+                        <option value="zakarpattia">Закарпатська</option>
+                        <option value="zaporizhia">Запорізька</option>
+                        <option value="ivano-frankivska">Івано-Франківська</option>
+                        <option value="kyiv">Київська</option>
                         <option value="luhansk">Луганська</option>
-                        <!-- Додайте інші області України -->
+                        <option value="lviv">Львівська</option>
+                        <option value="mykolaiv">Миколаївська</option>
+                        <option value="odesa">Одеська</option>
+                        <option value="poltava">Полтавська</option>
+                        <option value="sumy">Сумська</option>
+                        <option value="ternopil">Тернопільська</option>
+                        <option value="kharkiv">Харківська</option>
+                        <option value="kherson">Херсонська</option>
+                        <option value="khmelnytskyi">Хмельницька</option>
+                        <option value="chernihiv">Чернігівська</option>
+                        <option value="chernivtsi">Чернівецька</option>
                     </select>
                 </div>
 
